<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="317dp"
        android:layout_height="585dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagenandroid" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="navapp1"
        android:text="@string/botontablas1"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="24dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="navapp2"
        android:text="@string/botontablas2"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="24dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="navapp3"
        android:text="@string/botontablas3"
        tools:layout_editor_absoluteX="249dp"
        tools:layout_editor_absoluteY="21dp" />
</androidx.constraintlayout.widget.ConstraintLayout>